[project]
name = "basic-http-scheduling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.7",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "uvicorn[standard]>=0.38.0",
    "uvloop>=0.21.0",
]
